# Algorithms-and-data-structures

./: CMakeLists.txt  Makefile  README.md  main.cpp
Arrays/: Rotate.java
Lists/: LinkedList.cpp  LinkedList.h  Stack.cpp
Lists/c++/: AbstractList.h  LinkedList.cpp  SimpleNode.h  Stack.h
Lists/java/: DoubleNode.java  Heap.java  List.java  SetOfStacks.java  SimpleLinkedLists.java  SimpleNode.java  Stack.java  TreeNode.java
Recursion/: Fibbonacci.java  Fill.java  Kadene.java  Multiply.java  Parantheses.java  Perm.java  RobotPath.java  TrippleStep.java
Sorting/: MergeSort.cpp
Strings/: Hamming.java  KMP.java  LCS.java  Levenshtein.java  OneDistance.java  Permutation.java
